--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,7 +6,8 @@ python-multipart>=0.0.12
 
 # Data source dependencies
 requests>=2.31.0
-datasets>=2.16.1
+databricks-sql-connector==3.4.0
+pyarrow==16.1.0
 
 # Development dependencies (optional)
 # pytest==7.4.3
